--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Parachute Computing - Compact Rugged Computers
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: /mm-github-pages-starter
-url: https://mmistakes.github.io
-twitter_username: username
-github_username: username
+  Parachute Computing created highly ruggedized and powerful application servers
+  for expeditionary and offgrid computing needs.  We offer a full line of configurations
+  and personnel tracker accessories
+  for security, public safety, and expedition use.
+baseurl: /Parachute-site
+url: https://azimuth1.github.io
+twitter_username: Azimuth1Tech
+github_username: azimuth1
 minimal_mistakes_skin: default
 search: true
 
@@ -60,9 +61,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Jason Dalton"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
