--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "What you can do with Parachute"
+    url: /parachute/
+  - title: "Specs"
+    url: /specifications/
+  - title: "Accessories"
+    url: /accessories/
+  - title: "Team"
+    url: /team/
