--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baseurl: /Parachute-site
 url: https://azimuth1.github.io
 twitter_username: Azimuth1Tech
 github_username: azimuth1
-minimal_mistakes_skin: default
+minimal_mistakes_skin: sunrise
 search: true
 
 # Build settings
@@ -108,4 +108,4 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
